--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "1.7.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0"
   },
