--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ParkFinder",
-    "slug": "ParkFinder",
+    "name": "Park Central",
+    "slug": "park-central",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,9 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -25,6 +23,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    }
+  },
+  "extra": {
+    "eas": {
+      "projectId": "311d47e1-2ecc-4630-8fe9-642fd2d246f9"
     }
   }
 }
